# ina228-driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: ina228_port_stm32.c
examples/stm32/: .cproject  .project  README.md  data_log.ioc  data_log.py
examples/stm32/Core/Inc/: ina228.h
examples/stm32/Core/Src/: ina228.c  main.c
inc/: ina228.h
src/: ina228.c
tests/: test_ina228.c
